--- a/Interactive pictures via CSS/index.html
+++ b/Interactive pictures via CSS/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   <div class="hell">
-       <div class="heven">
+   <div class="container">
+       <div class="scontainer">
            <ul class="hover">
                  <li>
                         <img src="img/sagrada.jpg" alt="Sagrada Familia">
