--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
    <div class="hell">
+       <h1 class="main-header">Interactive pictures</h1>
        <div class="heven">
            <ul class="hover">
                  <li>
@@ -37,8 +38,8 @@
        </div>
    </div>
 
-   <footer id="main-footer">
-     <p> Marbonas Copyright &copy 2018 </p>
+   <footer class="main-footer">
+     
   </footer>
 </body>
 </html>
